# Vehicle-Dataset

./: CMakeLists.txt  README.md  backup.txt  baza.cpp  pojazdy.hpp
